<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<item android:id="@+id/uploadkr" android:title="@string/uploadkr" android:icon="@drawable/upload"/>
    <item android:id="@+id/new_folder_uploadkr" android:title="@string/newfolderkr" android:icon="@drawable/folder_new"/>
    <item android:id="@+id/copy_uploadkr" android:title="@string/copykr" android:icon="@drawable/copy"/>
     <item android:id="@+id/past_uploadkr" android:title="@string/pastkr" android:icon="@drawable/paste"/>
     <item android:id="@+id/updeletekr" android:title="@string/deletekr" android:icon="@drawable/deletered"/>
    <item android:id="@+id/changeview_uploadkr" android:title="@string/changeviewkr" android:icon="@drawable/chang_view"/>
     <item android:id="@+id/sort_uploadkr" android:title="@string/sortkr" android:icon="@drawable/sort"/>
</menu>