<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

<item android:id="@+id/uploadvn" android:title="@string/uploadvn" android:icon="@drawable/upload"/>
    <item android:id="@+id/new_folder_uploadvn" android:title="@string/newfoldervn" android:icon="@drawable/folder_new"/>
    <item android:id="@+id/copy_uploadvn" android:title="@string/copyvn" android:icon="@drawable/copy"/>
     <item android:id="@+id/past_uploadvn" android:title="@string/pastvn" android:icon="@drawable/paste"/>
     <item android:id="@+id/updeletevn" android:title="@string/deletevn" android:icon="@drawable/deletered"/>
    <item android:id="@+id/changeview_uploadvn" android:title="@string/changeviewvn" android:icon="@drawable/chang_view"/>
     <item android:id="@+id/sort_uploadvn" android:title="@string/sortvn" android:icon="@drawable/sort"/>
</menu>
