<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/newFolder"
        android:icon="@drawable/menu_new"
        android:title="@string/new_folder"/>
    <item android:id="@+id/paste"
        android:icon="@drawable/menu_paste"
        android:title="@string/paste"/>
    <item android:id="@+id/sort"
        android:icon="@drawable/menu_sort"
        android:title="@string/sort"/>
   	<item android:id="@+id/multiSelect"
   	    android:icon="@drawable/menu_multi"
   	    android:title="@string/multiSelect"/>
    <item android:id="@+id/search"
        android:icon="@drawable/menu_search"
        android:title="@string/search"/>
    <item android:id="@+id/setting"
        android:icon="@drawable/menu_setting"
        android:title="@string/setting"/>
</menu>