<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_frame">

                <TextView
                    android:id="@+id/tvBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backgroundcolor" />

                <Spinner
                    android:id="@+id/snBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" 
                    android:layout_below="@id/tvBackground"
                    android:prompt="@string/choosebgcolor"
                    android:entries="@array/color_arr"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/border_frame">

                <TextView
                    android:id="@+id/tvDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displaystyle" 
                    />

                <Spinner
                    android:id="@+id/snDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDisplay" 
                    android:prompt="@string/choosedisplay"
                    android:entries="@array/view_arr"/>

            </RelativeLayout>
             <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:background="@drawable/border_frame">

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/language" 
                    />

                <Spinner
                    android:id="@+id/snLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvLanguage" 
                    android:prompt="@string/chooselanguage"
                    android:entries="@array/language_arr"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>