<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    style="?list">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:background="@drawable/bg_top"
        android:padding="5dp" >

        <Button
            android:id="@+id/btBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/back" />

        <EditText
            android:id="@+id/tvCurrentFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/btHome"
            android:layout_toRightOf="@+id/btBack"
            android:gravity="left|center_horizontal"
            android:lines="1"
            android:singleLine="true"
            android:text="TextView"
            android:textColor="#333"
            android:textSize="18dp" 
            android:background="@color/white"/>

        <Button
            android:id="@+id/btHome"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/home" />
    </RelativeLayout>

    
    <LinearLayout
    	android:id="@+id/hidden_buttons"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:visibility="gone">    
    	
    	<Button
    		android:id="@+id/hidden_delete"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
      		android:text="@string/delete"
      		style="@style/button_text"
      		android:background="@drawable/blue_button"/>
    	<Button
    		android:id="@+id/hidden_copy"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/copy"
      		style="@style/button_text"
      		android:background="@drawable/blue_button"/>
    	<Button
    		android:id="@+id/hidden_move"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/move"
      		style="@style/button_text"
      		android:background="@drawable/blue_button"/>
    	<Button android:id="@+id/hidden_Cancel"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:text="@string/cancel"
      		style="@style/button_text"
      		android:background="@drawable/blue_button"/>
    </LinearLayout>	
    <ListView
        android:id="@+id/lvFile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"        
    	android:cacheColorHint="@android:color/transparent"
    	style="?listBorder"/>

    <GridView
        android:id="@+id/gridViewFile"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnWidth="100dp"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="auto_fit"
        android:orientation="vertical"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp">
    </GridView>

    
</LinearLayout>